--- a/Battle_of_the_Neighborhoods_Week_4.ipynb
+++ b/Battle_of_the_Neighborhoods_Week_4.ipynb
@@ -6,7 +6,7 @@
       "name": "Battle_of_the_Neighborhoods_Week_4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNxSTYPEY8KH29NhBkW/muv",
+      "authorship_tag": "ABX9TyNN5h08jGkyq9zSOJUjVtQ5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Applied Data Science Capstone Class - Battle of the Neigbborhoods - Week 4"
+        "# Applied Data Science Capstone Class - Battle of the Neighborhoods - Week 4"
       ]
     },
     {
