--- a/Battle_of_the_Neighborhoods_Week_4_Problem_Statement.ipynb
+++ b/Battle_of_the_Neighborhoods_Week_4_Problem_Statement.ipynb
@@ -6,7 +6,7 @@
       "name": "Battle_of_the_Neighborhoods_Week_4_Problem_Statement.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP42K/0CzxKr8BmYbrXfBj9",
+      "authorship_tag": "ABX9TyMfJEiL8nzEJJLZI3n3MBSV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,10 @@
         "\n",
         "Since Toronto is larger, but still close in size to Chicago, the Product Owners for the Portillo’s chain would like to identify an area in Toronto that is similar to the most profitable Portillo’s location.  That location is in the Near North neighborhood (zip code 60610) at Clark Street and Ontario Street in Chicago.  This location is very popular with both local residents and with tourists to Chicago. \n",
         "\n",
-        "By finding a neighborhood in Toronto similar to the Near North neighborhood, the chain can open a new Portillo’s location, tailor it to the sensibilities of that neighborhood, and begin to expand to multiple locations in Toronto from there.\n"
+        "By finding a neighborhood in Toronto similar to the Near North neighborhood, the chain can open a new Portillo’s location, tailor it to the sensibilities of that neighborhood, and begin to expand to multiple locations in Toronto from there.\n",
+        "\n",
+        "**Target Audience**\n",
+        "The target audience is the leadership team for the Portillo's chain at Bershire Hathaway.  Since they are the people who decide where new sites will be located, the analysis will be targeted to their concerns.\n"
       ]
     },
     {
