--- a/Battle_of_the_Neighborhoods_Week_4_Data.ipynb
+++ b/Battle_of_the_Neighborhoods_Week_4_Data.ipynb
@@ -6,7 +6,7 @@
       "name": "Battle_of_the_Neighborhoods_Week_4_Data.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPUymY65etdSIf9Oe4mFif9",
+      "authorship_tag": "ABX9TyOu5h17pHS+0E8E+TAwQOIS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -134,7 +134,11 @@
         "\n",
         "Chicago data will be used to come up with a list of venues (by type) as a point of comparison. Chicago zip code data will be filtered for the zip code 60610. If the data available does not have the longitude and latitude available, they will be appended with geospatial data. Finally, these data will be merged with Foursquare data. They will then be analyzed, showing the most popular restaurant venues by type in that area.\n",
         "\n",
+        "For example, for the Near North neighborhood (zip code 60610) at its longitude and latitude, examples may show a preponderance of national chain pizza restaurants (e.g., Pizzeria Uno) or national chain restaurants geared toward families with young children (e.g., The Rainforest Café).\n",
+        "\n",
         "Toronto data will be analyzed by postal code. After merging the postal codes with geospatial data (to get the longitude and latitude), this will be married with Foursquare data. The data will be analyzed by venue (and venue type) to identify postal codes that would be considered analogous to that of the Chicago 60610 zip code.\n",
+        "\n",
+        "For example, the Near North Portillo's restaurant may have a number of Italian restaurants that are local to Chicago (i.e., not chains).  We can analyze the data to identify postal codes that have this same characteristic.\n",
         "\n",
         "Recommendations will be made for locating a Portillo's store in Toronto. This will allow the chain to replicate the formula that worked in Chicago, with the goal of expanding the brand's presence throughout the greater Toronto area."
       ]
